force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/CQ_GJ_SQX_Child_Object__c.object-meta.xml
<CustomObject>
    <label>CQ GJ Child Object</label>
    <nameField>
        <label>Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ GJ Child Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>