force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/fields/CQ_GJ_Child_Type__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Child_Type__c</fullName>
    <description>It will store the type of the child</description>
    <label>Child Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brilliant</fullName>
            </value>
            <value>
                <fullName>Laborious</fullName>
            </value>
            <value>
                <fullName>Lazy</fullName>
            </value>
            <value>
                <fullName>Prefer Hard Work</fullName>
            </value>
            <value>
                <fullName>Prefer Smart Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>