force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/fields/CQ_GJ_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Date_Of_Birth__c</fullName>
    <description>stores the birthday of the child</description>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>