force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/fields/CQ_GJ_SQX_Parent_Info__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_SQX_Parent_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>store the info about the child&apos;s parent</description>
    <label>Parent Info</label>
    <referenceTo>CQ_GJ_SQX_Parent_Object__c</referenceTo>
    <relationshipLabel>CQ GJ Child Objects</relationshipLabel>
    <relationshipName>CQ_GJ_Child_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>