force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/fields/CQ_GJ_SQX_User_info__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_SQX_User_info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>stores the info about the user</description>
    <label>User info</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CQ_GJ_Child_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>