force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/fields/CQ_GJ_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Title__c</fullName>
    <description>will store the title of child like mr, ms, mrs</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>