force-app/main/default/objects/CQ_GJ_SQX_Child_Object__c/fields/CQ_GJ_Upload_Marksheet__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Upload_Marksheet__c</fullName>
    <description>children will upload their mark sheets here</description>
    <label>Upload Marksheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>